# myWebsite

./: 404.html  README.md  compute.sh  cv.markdown  index.markdown  misc.markdown  research.markdown  site.hs  stack.yaml  teaching.markdown  website-flg.cabal
css/: bootstrap.css  core.css
docs/td-macros/: TD01.tex  TD01corr.tex  TD02.tex  TD02corr.tex  TD02finalcorr.tex  TD03.tex  TD03corr.tex  TD03finalcorr.tex  TD04.tex  TD04corr.tex  TD05.tex  TD05corr.tex  TD06.tex  TD06corr.tex  TD07.tex  TD07corr.tex  TD08.tex  TD08corr.tex  TD08corrInit.tex  TD09.tex  TD09corr.tex  TD10.tex  TD10corr.tex  TD10corrInit.tex  myren.pl
templates/: default.html  defaultteaser.html  home.html
