name:                website-flg
version:             1
synopsis:            My website
-- description:
homepage:            francois-le-grand.com
-- license:
author:              François Le Grand
maintainer:          legrand@em-lyon.com
copyright:           (c) François Le Grand 2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable website-flg
  main-is:             site.hs
  -- other-modules:
  build-depends:       base >=4.6 && <4.9,
                       containers,
                       pandoc-types,
                       pandoc >= 1.15,
                       hakyll >= 4.7,
                       regex-compat,
                       filepath,
                       errors
  default-language:    Haskell2010
